# storage/api-docs/api-docs.json
@@ -20,14 +20,14 @@
         }
     ],
     "paths": {
-        "/user/validate": {
+        "/user/sendOtp": {
             "post": {
                 "tags": [
                     "Users"
                 ],
-                "summary": "Check if a user is an existing or a new one",
-                "description": "API to check if a user is an existing or a new one, using their phone number. <br><br>Returns either `existing` or `new` as user type.",
-                "operationId": "userValidate",
+                "summary": "Send SMS verification OTP code for users",
+                "description": "API to send SMS verification OTP code for users. <br><br>Accepts `phone_number` and either `android_device_id` or `ios_device_id`.",
+                "operationId": "sendOtp",
                 "requestBody": {
                     "required": true,
                     "content": {
@@ -36,11 +36,19 @@
                                 "properties": {
                                     "phone_number": {
                                         "type": "string"
+                                    },
+                                    "android_device_id": {
+                                        "type": "string"
+                                    },
+                                    "ios_device_id": {
+                                        "type": "string"
                                     }
                                 },
                                 "type": "object",
                                 "example": {
-                                    "phone_number": "+919219592195"
+                                    "phone_number": "+918943406910",
+                                    "android_device_id": "08a2f5d1-c567-4334-b156-e037c63f8a41",
+                                    "ios_device_id": ""
                                 }
                             }
                         }
@@ -48,52 +56,24 @@
                 },
                 "responses": {
                     "200": {
-                        "description": "Successful Operation"
+                        "description": "Successful Operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
                     }
                 }
             }
         },
-        "/user/sendSmsOtp": {
+        "/user/verifyOtp": {
             "post": {
                 "tags": [
                     "Users"
                 ],
-                "summary": "Send SMS verification code for new users",
-                "description": "API to send SMS verification code for new users. <br><br>Returns `code` for OTP verification purpose.",
-                "operationId": "sendSmsOtp",
-                "requestBody": {
-                    "required": true,
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "properties": {
-                                    "phone_number": {
-                                        "type": "string"
-                                    }
-                                },
-                                "type": "object",
-                                "example": {
-                                    "phone_number": "+15005550006"
-                                }
-                            }
-                        }
-                    }
-                },
-                "responses": {
-                    "200": {
-                        "description": "Successful Operation"
-                    }
-                }
-            }
-        },
-        "/user/registerAndLogin": {
-            "post": {
-                "tags": [
-                    "Users"
-                ],
-                "summary": "Login an existing user as well as new user, after successful registration of a new user",
-                "description": "API to login an existing user as well as new user. In-case of new one, user is registered before attempting login. Boolean `user_verified` value is needed for both existing and new user. <br><br>Returns `token` for later user authorization purpose.",
-                "operationId": "registerAndLogin",
+                "summary": "Verify user entered OTP code",
+                "description": "API to verify user entered OTP code. <br><br>Accepts `phone_number` and `code`. Returns `token` for user authorization purpose.",
+                "operationId": "verifyOtp",
                 "requestBody": {
                     "required": true,
                     "content": {
@@ -103,22 +83,14 @@
                                     "phone_number": {
                                         "type": "string"
                                     },
-                                    "user_verified": {
-                                        "type": "boolean"
-                                    },
-                                    "android_device_token": {
-                                        "type": "string"
-                                    },
-                                    "ios_device_token": {
-                                        "type": "string"
+                                    "otp_code": {
+                                        "type": "integer"
                                     }
                                 },
                                 "type": "object",
                                 "example": {
-                                    "phone_number": "+919219592195",
-                                    "user_verified": true,
-                                    "android_device_token": "08a2f5d1-c567-4334-b156-e037c63f8a41",
-                                    "ios_device_token": ""
+                                    "phone_number": "+918943406910",
+                                    "otp_code": "123456"
                                 }
                             }
                         }
@@ -126,7 +98,12 @@
                 },
                 "responses": {
                     "200": {
-                        "description": "Successful Operation"
+                        "description": "Successful Operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
                     }
                 }
             }
